@@ -1,6 +1,9 @@
 noinst_LTLIBRARIES = libconvolution.la
 
 libconvolution_la_SOURCES = \
+	convolution.c \
+	pconvolution.h \
+	conv.c \
 	convol_dispatch.c \
 	im_addgnoise.c \
 	im_compass.c \
