@@ -69,6 +69,9 @@ GType vips_intent_get_type (void) G_GNUC_CONST;
 /* enumerations from "../../../libvips/include/vips/operation.h" */
 GType vips_operation_flags_get_type (void) G_GNUC_CONST;
 #define VIPS_TYPE_OPERATION_FLAGS (vips_operation_flags_get_type())
+/* enumerations from "../../../libvips/include/vips/convolution.h" */
+GType vips_precision_get_type (void) G_GNUC_CONST;
+#define VIPS_TYPE_PRECISION (vips_precision_get_type())
 /* enumerations from "../../../libvips/include/vips/object.h" */
 GType vips_argument_flags_get_type (void) G_GNUC_CONST;
 #define VIPS_TYPE_ARGUMENT_FLAGS (vips_argument_flags_get_type())
