@@ -47,8 +47,9 @@ vips_scan_headers = \
 	${top_srcdir}/libvips/include/vips/arithmetic.h \
 	${top_srcdir}/libvips/include/vips/util.h \
 	${top_srcdir}/libvips/include/vips/image.h \
-	${top_srcdir}/libvips/include/vips/operation.h \
 	${top_srcdir}/libvips/include/vips/colour.h \
+	${top_srcdir}/libvips/include/vips/operation.h \
+	${top_srcdir}/libvips/include/vips/convolution.h \
 	${top_srcdir}/libvips/include/vips/object.h
 
 enumtypes.c: $(vips_scan_headers) Makefile
