@@ -255,6 +255,7 @@ vips_init( const char *argv0 )
 	vips_resample_operation_init();
 	vips_colour_operation_init();
 	vips_histogram_operation_init();
+	vips_convolution_operation_init();
 
 	/* Load up any plugins in the vips libdir. We don't error on failure,
 	 * it's too annoying to have VIPS refuse to start because of a broken
